👌 [fix] set body height and overflow for macos over scroll

--- a/src/theme/init.less
+++ b/src/theme/init.less
@@ -1,5 +1,7 @@
 html,
 body {
+	padding: 0;
+	margin: 0;
 	background-color: var(--color_bg);
 	font-size: var(--fontsize_normal);
 	font-family: 'Open Sans', 'Noto Sans SC', -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -11,6 +13,11 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	scroll-behavior: smooth;
 	text-rendering: optimizeLegibility;
+}
+
+body {
+	height: 100%;
+	overflow: hidden;
 }
 
 ::-webkit-scrollbar-thumb {
